force-app/main/default/objects/Product_Review__c/Product_Review__c.object-meta.xml
<CustomObject>
    <label>Customer Comment</label>
    <nameField>
        <displayFormat>REV-{000000}</displayFormat>
        <label>Customer Comment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>