force-app/main/default/objects/Product_Review__c/fields/Actual_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Actual_Sentiment__c</fullName>
    <formula>CASE(TEXT( Star_Rating__c ), 
&quot;1&quot;, &quot;Negative&quot;, 
&quot;2&quot;, &quot;Negative&quot;, 
&quot;3&quot;, &quot;Neutral&quot;, 
&quot;4&quot;, &quot;Positive&quot;, 
&quot;5&quot;, &quot;Positive&quot;, 

&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Moderator&apos;s Sentiment</label>
    <type>Text</type>
</CustomField>