force-app/main/default/objects/Product_Review__c/fields/Calc_Sentiment_Score__c.field-meta.xml
<CustomField>
    <fullName>Calc_Sentiment_Score__c</fullName>
    <formula>If((Sentiment_Score__c *5)&lt;1,1,Sentiment_Score__c *5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sentiment Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>