force-app/main/default/objects/Product_Review__c/fields/Customer_Product__c.field-meta.xml
<CustomField>
    <fullName>Customer_Product__c</fullName>
    <label>Customer Product</label>
    <referenceTo>Customer_Product__c</referenceTo>
    <relationshipName>Product_Reviews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>