force-app/main/default/objects/Product_Review__c/fields/Positive_Review__c.field-meta.xml
<CustomField>
    <fullName>Positive_Review__c</fullName>
    <formula>Sentiment_Output__c =&quot;Positive&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Positive Review</label>
    <type>Checkbox</type>
</CustomField>