force-app/main/default/objects/Product_Review__c/fields/Prediction_Result__c.field-meta.xml
<CustomField>
    <fullName>Prediction_Result__c</fullName>
    <label>Prediction Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>