force-app/main/default/objects/Product_Review__c/fields/Reviewer_Age__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Age__c</fullName>
    <defaultValue>32</defaultValue>
    <label>Reviewer Age</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>