force-app/main/default/objects/Product_Review__c/fields/Reviewer_Sex__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Sex__c</fullName>
    <defaultValue>&quot;F&quot;</defaultValue>
    <label>Reviewer Sex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>