force-app/main/default/objects/Product_Review__c/fields/Sentiment_Output__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Output__c</fullName>
    <description>Formula that calculates a sentiment phrase based on the sentiment score calculated by the ML model in the Salesforce function</description>
    <formula>IF( Sentiment_Score__c &gt;0.6, &quot;Positive&quot;, IF(Sentiment_Score__c &gt;0.4,&quot;Neutral&quot;,&quot;Negative&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Predicted Sentiment</label>
    <type>Text</type>
</CustomField>