force-app/main/default/objects/Product_Review__c/fields/Sentiment_Score__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Score__c</fullName>
    <label>Raw Sentiment Score</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>