force-app/main/default/objects/Product_Review__c/fields/Star_Rating_Number__c.field-meta.xml
<CustomField>
    <fullName>Star_Rating_Number__c</fullName>
    <formula>VALUE(TEXT(Star_Rating__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Moderator&apos;s Score Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>