force-app/main/default/objects/Product_Review__c/validationRules/Product_Reviews_must_include_a_review.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Reviews_must_include_a_review</fullName>
    <active>true</active>
    <description>Product Reviews must include a review when created</description>
    <errorConditionFormula>AND(
ISNEW() ,
 ISBLANK( Review__c ) 

)</errorConditionFormula>
    <errorMessage>A review must be added</errorMessage>
</ValidationRule>