force-app/main/default/objects/Product_Review__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Review_Date__c</columns>
    <columns>Reviewer_Age__c</columns>
    <columns>Reviewer_Sex__c</columns>
    <columns>Star_Rating__c</columns>
    <columns>Prediction_Result__c</columns>
    <columns>Calc_Sentiment_Score__c</columns>
    <columns>Sentiment_Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>